{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 45,
  "lineage": "2618967f-e229-c2a8-16e1-127cef03543b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bincom_iac_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-053b0d53c279acc90",
            "arn": "arn:aws:ec2:us-east-1:857350180116:instance/i-060bae48e9107665d",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-060bae48e9107665d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "apache2-webserver-key-pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-056594c9469454104",
            "private_dns": "ip-10-0-1-100.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.100",
            "public_ip": "3.238.143.202",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-031e3c314115999ae",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07cf936400270af2e",
            "tags": {
              "Environment": "Bincom IAC",
              "Name": "Bincom IAC Apache 2",
              "OS": "UBUNTU"
            },
            "tags_all": {
              "Environment": "Bincom IAC",
              "Name": "Bincom IAC Apache 2",
              "OS": "UBUNTU"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08a1ac5ed4678a9a6"
            ]
          },
          "dependencies": [
            "aws_security_group.bincom_iac_web_sg",
            "aws_subnet.bincom_iac_public_subnet",
            "aws_vpc.bincom_iac_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "bincom_iac_ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:857350180116:internet-gateway/igw-0898731ae7608072b",
            "id": "igw-0898731ae7608072b",
            "owner_id": "857350180116",
            "tags": {
              "Name": "Bincom IAC Internet Gateway"
            },
            "tags_all": {
              "Name": "Bincom IAC Internet Gateway"
            },
            "vpc_id": "vpc-02ac4cb2405a9edc2"
          },
          "dependencies": [
            "aws_vpc.bincom_iac_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "bincom_iac_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:857350180116:route-table/rtb-029b55128668d2f99",
            "id": "rtb-029b55128668d2f99",
            "owner_id": "857350180116",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0898731ae7608072b",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0898731ae7608072b",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Bincom IAC Public Route Table"
            },
            "tags_all": {
              "Name": "Bincom IAC Public Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-02ac4cb2405a9edc2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.bincom_iac_ig",
            "aws_vpc.bincom_iac_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "bincom_iac_public_1_rt_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e3e7b67537577d21",
            "route_table_id": "rtb-029b55128668d2f99",
            "subnet_id": "subnet-07cf936400270af2e"
          },
          "dependencies": [
            "aws_internet_gateway.bincom_iac_ig",
            "aws_route_table.bincom_iac_public_rt",
            "aws_subnet.bincom_iac_public_subnet",
            "aws_vpc.bincom_iac_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bincom_iac_web_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:857350180116:security-group/sg-08a1ac5ed4678a9a6",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08a1ac5ed4678a9a6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Bincom IAC HTTP and SSH",
            "name_prefix": "",
            "owner_id": "857350180116",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-02ac4cb2405a9edc2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.bincom_iac_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "bincom_iac_private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:857350180116:subnet/subnet-0d19130c2ae50a13e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d19130c2ae50a13e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "857350180116",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Bincom IAC Private Subnet"
            },
            "tags_all": {
              "Name": "Bincom IAC Private Subnet"
            },
            "vpc_id": "vpc-02ac4cb2405a9edc2"
          },
          "dependencies": [
            "aws_vpc.bincom_iac_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "bincom_iac_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:857350180116:subnet/subnet-07cf936400270af2e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07cf936400270af2e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "857350180116",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Bincom IAC Public Subnet"
            },
            "tags_all": {
              "Name": "Bincom IAC Public Subnet"
            },
            "vpc_id": "vpc-02ac4cb2405a9edc2"
          },
          "dependencies": [
            "aws_vpc.bincom_iac_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "bincom_iac_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:857350180116:vpc/vpc-02ac4cb2405a9edc2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-035cba487d726e98f",
            "default_route_table_id": "rtb-02622aff401ddc0a8",
            "default_security_group_id": "sg-0ac5a5956cb348248",
            "dhcp_options_id": "dopt-0459f61b23e647623",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-02ac4cb2405a9edc2",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02622aff401ddc0a8",
            "owner_id": "857350180116",
            "tags": {
              "Name": "Bincom IAC"
            },
            "tags_all": {
              "Name": "Bincom IAC"
            }
          }
        }
      ]
    }
  ]
}